// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading Component > should match snapshot with default props 1`] = `
<div>
  <div
    class="MuiBox-root css-c2gim9"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-pifqn3-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.5"
          stroke-width="3"
        />
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body2 css-136k4gi-MuiTypography-root"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`Loading Component > should match snapshot with full screen 1`] = `
<div>
  <div
    class="MuiBox-root css-1xybold"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-dko2u4-MuiCircularProgress-root"
      role="progressbar"
      style="width: 60px; height: 60px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20"
          stroke-width="4"
        />
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1ux19l4-MuiTypography-root"
    >
      Please wait...
    </p>
  </div>
</div>
`;
